<resources>
    <string name="app_name">Sunshine</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>

    <string name="title_activity_detail">Details</string>
    <string name="title_activity_settings">Settings</string>

    <string name="pref_location_label">location</string>
    <string name="pref_location_key" translatable="false">location</string>
    <string name="pref_location_default" translatable="false">Berlin,de</string>

    <string name="pref_language_label">language</string>
    <string name="pref_language_key" translatable="false">language</string>
    <string name="pref_language_default" translatable="false">de</string>

    <string name="pref_units_label">units</string>
    <string name="pref_units_key" translatable="false">units</string>
    <string name="pref_units_metric">metric</string>
    <string name="pref_units_imperial">imperial</string>

    <string name="action_map">Map location</string>

</resources>
