<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ListPreference
        android:title="@string/pref_language_label"
        android:key="@string/pref_language_key"
        android:defaultValue="@string/pref_language_default"
        android:entryValues="@array/pref_language_values"
        android:entries="@array/pref_language_options"/>

    <EditTextPreference
       android:title="@string/pref_location_label"
       android:key="@string/pref_location_key"
       android:defaultValue="@string/pref_location_default"
       android:inputType="text"
       android:singleLine="true"
       android:selectAllOnFocus="true"/>

    <ListPreference
        android:title="@string/pref_units_label"
        android:key="@string/pref_units_key"
        android:defaultValue="@string/pref_units_metric"
        android:icon="@drawable/thermo_celsius_fahrenheit_sun_66"
        android:entryValues="@array/pref_units_values"
        android:entries="@array/pref_units_options"/>

</PreferenceScreen>